[gd_scene load_steps=12 format=3 uid="uid://c71wo0imkhqta"]

[ext_resource type="Script" path="res://Scripts/GameBoard3d.gd" id="1_byx7t"]
[ext_resource type="Shader" path="res://Scenes.tscn/game_board_3d.gdshader" id="2_ggfuc"]
[ext_resource type="Script" path="res://Scripts/HexField.gd" id="3_8ne02"]
[ext_resource type="PackedScene" uid="uid://b0jsefipj7fkd" path="res://Scenes.tscn/ResourceMeshes.tscn" id="4_8c5g8"]
[ext_resource type="PackedScene" uid="uid://digitukubwipd" path="res://Scenes.tscn/number_token3d.tscn" id="5_3lg8t"]
[ext_resource type="Script" path="res://Scripts/CameraButton.gd" id="6_kki3j"]
[ext_resource type="PackedScene" path="res://Scenes.tscn/Sand.tscn" id="6_xc3r8"]
[ext_resource type="PackedScene" uid="uid://c8o23n7oqhgjb" path="res://Scenes.tscn/road_3d.tscn" id="8_jeorx"]
[ext_resource type="Script" path="res://Scripts/RoadPlacer.gd" id="8_wj653"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ooj2t"]
render_priority = 0
shader = ExtResource("2_ggfuc")
shader_parameter/wave_speed = 1.0
shader_parameter/wave_amplitude = 0.1
shader_parameter/wave_frequency = 4.0
shader_parameter/time_factor = 1.0

[sub_resource type="PlaneMesh" id="PlaneMesh_sqoo1"]
material = SubResource("ShaderMaterial_ooj2t")
size = Vector2(500, 500)

[node name="GameBoard3D" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.11352, 0.14671, 0.224033)
script = ExtResource("1_byx7t")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.612372, 0.353553, 0, 0.5, 0.866025, -0.707107, -0.612372, 0.353553, 0, 0, 0)
light_color = Color(0.713726, 0.713726, 0.713726, 1)
light_energy = 0.5
shadow_enabled = true

[node name="Bg_water" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_sqoo1")

[node name="HexField" type="Node3D" parent="."]
script = ExtResource("3_8ne02")
hex_scene = ExtResource("4_8c5g8")
number_token_scene = ExtResource("5_3lg8t")
sand = ExtResource("6_xc3r8")

[node name="Sand" parent="." instance=ExtResource("6_xc3r8")]

[node name="ResourceMeshes" parent="." instance=ExtResource("4_8c5g8")]

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.951
anchor_right = 0.5
anchor_bottom = 0.951
offset_left = -43.0
offset_top = -15.248
offset_right = 42.0
offset_bottom = 15.752
grow_horizontal = 2
grow_vertical = 0
text = "Change View"
script = ExtResource("6_kki3j")

[node name="RoadPlacer" type="Node3D" parent="."]
script = ExtResource("8_wj653")
road_scene = ExtResource("8_jeorx")

[node name="CameraPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.50502e-06, -1.54972e-06)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 10)

[node name="CanvasLayer - UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Control" parent="CanvasLayer - UI"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -24.0
offset_right = -1.0
offset_bottom = 48.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer - UI/Panel"]
layout_mode = 0
offset_top = -32.0
offset_right = 76.0
offset_bottom = 69.0

[node name="Road" type="Button" parent="CanvasLayer - UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Road"

[node name="House" type="Button" parent="CanvasLayer - UI/Panel/VBoxContainer"]
layout_mode = 2
text = "House"

[node name="Warriors" type="Button" parent="CanvasLayer - UI/Panel/VBoxContainer"]
layout_mode = 2
text = "Warriors"

[connection signal="pressed" from="CanvasLayer - UI/Panel/VBoxContainer/Road" to="." method="_on_road_pressed"]
